clear previous graphics
Signed-off-by: AwayQuEM <awayquym@gmail.com>

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -37,3 +37,15 @@
   fill: none;
   stroke-width: 1.5px;
 }
+
+
+
+/*body, html {*/
+  /*background-color: #21252B;*/
+  /*font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;*/
+  /*color: white;*/
+/*}*/
+
+/*a {*/
+  /*color: white;*/
+/*}*/
