--- a/src/classDiagramDynamic/ClassDiagramViewDynamic.css
+++ b/src/classDiagramDynamic/ClassDiagramViewDynamic.css
@@ -4,6 +4,15 @@ body, html {
     color: white;
 }
 
+/*body{*/
+    /*margin: 0;*/
+    /*padding: 0;*/
+    /*border: 0;*/
+    /*overflow: hidden;*/
+    /*height: 100%;*/
+    /*max-height: 100%;*/
+/*}*/
+
 ul li a {
     color: white;
 }
